                       in the preferences file are reachable by the
                       "syscmd" keyword for keys files now.
flux    - feature: "syscmd" keyword for menu, toolbar and keys files
flux    - feature: include statement for menu and toolbar files featuring
                   scriptable menus (as in WindowMaker) and native
                   support for GNOME and KDE menus
        - feature: execute "startup" script found in resource path
                   ($HOME, $ETCDIR, $LIBDIR) after initialization

1.2.0: 2002-06-30
	- Czech translation by Jan Horak
	- Lithuanian translation updated (Martynas Jocius)

1.2.0pre3: 2002-06-12
	- updated configure platform coverage
        - really fix --with-guievents / compile w/ ESD
        - several memory leaks fixed

1.2.0pre2: 2002-05-26
	- bugfix: TaskBarDoubleHeight has incorrect layout
	- workaround: doNotCover option removed from default winoptions
                      (seems to have problems with GKrellM)
	- bugfix: --with-guievents; esd compile fix

1.2.0pre1: 2002-05-12
	- bugfix: fix syntax error when HAVE_BASENAME is defined
	          (under cygwin for example)
	- bugfix: updated Catalan translation (thanks Toni Cunyat i Alario)
	- bugfix: updated config.guess in order to allow autodetection of more
		  recent architectures
	- bugfix: the network load indicator field `transferred' overflew
		  when > 2Go. Now make use of 64 bits value for the network
		  load (See: bugs.debian.org/118728, thanks Eduard Bloch)
	- bugfix: fix for sefault when TrayDrawBevel=1 (thanks Julien Lemoine)
	- bugfix: fix for a window position which marches up the screen, 
                  noticeable when launching Galeon and Xchat (thanks 
                  Julien Lemoine)
	- bugfix: fix display of taskbar(in hide mode)
	- bugfix: fix logout problem (in icewm-lite)
	- bugfix: height and width problem in maximized mode 
	          (difference of 2 pixels)
	- bugfix: fix problem with xawdecode (in fullscreen mode)