@@ -7,6 +7,23 @@
 #include "ycursor.h"
 #include "ypaths.h"
 
+
+#define GET_SHORT_ARGUMENT(Name) \
+    (!strncmp(*arg, "-" Name, 2) ? ((*arg)[2] ? *arg + 2 : *++arg) : NULL)
+#define GET_LONG_ARGUMENT(Name) \
+    (!strpcmp(*arg, "-" Name, "=") ? \
+        ('=' == (*arg)[sizeof(Name)] ? (*arg) + sizeof(Name) + 1 : *++arg) : \
+     !strpcmp(*arg, "--" Name, "=") ? \
+        ('=' == (*arg)[sizeof(Name) + 1] ? (*arg) + sizeof(Name) + 2 : *++arg) : \
+     NULL)
+
+#define IS_SHORT_SWITCH(Name)  (!strcmp(*arg, "-" Name))
+#define IS_LONG_SWITCH(Name)   (!(strcmp(*arg, "-" Name) && \
+                                  strcmp(*arg, "--" Name)))
+#define IS_SWITCH(Short, Long) (IS_SHORT_SWITCH(Short) || \
+                                IS_LONG_SWITCH(Long))
+
+
 class YTimer;
 class YSocket;
 class YClipboard;
